# melody

./: .gitignore  .jshintrc  Cargo.toml  LICENSE  README.md  changelog.md  idea.md  index.js  index.ts  package.json  plan.md  start.bat  tsconfig.json
commands/: configure.js  destroy.js  dump.js  feedback.js  help.js  ping.js
core/: bot.js  botEvents.js  changeloglatest.json  changeloglatest.txt  commandtemplate.js  events.js  index.js  melody.js  setup.js
core/commands/: ban.js  blacklist.js  changelog.js  cleverbotzone.js  configure.js  connectfour.js  destroy.js  dump.js  feedback.js  help.js  mute.js  peek.js  ping.js  restart.js  stop.js
core/modules/: Bot.js  CleverChannel.js  Command.js  Datastore.js  GuildManager.js  Lazystore.js  Logger.js  Queue.js  automod.js  cbmd5.js  constants.js  controller.js  fswrapper.js  math.js  mut.js  util.js
core/modules/util/: LootTable.js  Util.js  cb_md5.js  fswrapper.js  util.js
core/static/: charmap.json  witty.json
core/structures/: Bot.js  CleverChannel.js  Command.js  Communicator.js  Datastore.js  GuildManager.js  Lazystore.js  Logger.js  LootTable.js  Queue.js  Result.js
core/subfunctions/: AutomodContext.js  Blacklis.js  Blacklist.js  CleverBotAgent.js  ConnectFourAgent.js  ConnectFourGame.js  blacklist.js  cleverbot.js
libs/cacheable/: Cargo.toml
libs/cacheable/src/: lib.rs
libs/chessboard-render/: Cargo.toml
libs/chessboard-render/assets/: pieces.license.md
libs/chessboard-render/examples/: main.rs
libs/chessboard-render/src/: lib.rs
libs/cleverbot/: Cargo.toml
libs/cleverbot-logs/: Cargo.toml
libs/cleverbot-logs/src/: lib.rs
libs/cleverbot/src/: lib.rs
libs/commander/: Cargo.toml
libs/commander/src/: lib.rs
libs/feed-machine/: Cargo.toml
libs/feed-machine/src/: handle.rs  lib.rs  model.rs
libs/feed-machine/src/model/: twitter.rs  youtube.rs
libs/file-formats/: Cargo.toml
libs/file-formats/src/: lib.rs
libs/melody-chess/: Cargo.toml
libs/melody-chess/examples/: main.rs
libs/melody-chess/src/: lib.rs  render.rs
libs/melody-commander/: Cargo.toml
libs/melody-commander/src/: lib.rs
libs/melody-connect-four/: Cargo.toml
libs/melody-connect-four/src/: lib.rs
libs/melody-flag/: Cargo.toml
libs/melody-flag/src/: lib.rs
libs/melody-framework/: Cargo.toml
libs/melody-framework/src/: commands.rs  feature.rs  handler.rs  lib.rs
libs/melody-random/: Cargo.toml
libs/melody-random/src/: lib.rs
libs/melody-ratelimiter/: Cargo.toml
libs/melody-ratelimiter/src/: lib.rs
libs/melody-rss-feed/: Cargo.toml
libs/melody-rss-feed/src/: lib.rs
libs/melody-timer/: Cargo.toml
libs/melody-timer/src/: lib.rs
libs/rss-feed/: Cargo.toml
libs/rss-feed/src/: lib.rs
libs/term-stratum/: Cargo.toml
libs/term-stratum/src/: lib.rs
modules/: Analytics.js  CleverChannel.js  Command.js  Datastore.js  GuildManager.js  Logger.js  controller.js  manager.js
modules/util/: cleverbot_md5.js
src/: Embeds.js  blueprint.rs  build_id.rs  client_config.json  commands.rs  config.js  data.rs  error.rs  feature.rs  handler.rs  logger.rs  main.rs  melody.js  prelude.rs  ratelimiter.rs  start.js  start.ts  terminal.rs  utils.rs
src/cleverbot/: CleverBot.js  CleverBotChannel.js  md5.js
src/commands/: aghpb.js  clever.js  connect_four.rs  eval.js  feed.rs  general.rs  help.js  jasc-watchnext.js  music_player.rs  ping.js  restart.js  role_playing.rs  roles.rs  stop.js
src/core/: Bot.js  Collection.js  Command.js  Command.ts  Embeds.js  GuildManager.js  Lazystore.js  Logger.js  Manager.js  Manager.ts  Melody.js  Melody.ts  MelodyEvents.ts  core.js
src/core/modules/utils/: fs.js  general.js  logging.js  object.js
src/core/structures/: Bot.js  Collection.js  Command.js  GuildManager.js  Lazystore.js  Logger.js  Queue.js
src/data/: activities.rs  brain.rs  config.rs  persist.rs
src/data/config/: activities.rs
src/feature/: CleverBot.js  CleverBotManager.js  cleverbot.rs  connect_four.rs  dice_roll.rs  emoji_stats.rs  feed.rs  message_chains.rs  music_player.rs  roles.rs
src/fs/: Datastore.js  Datastore.ts  Entrystore.js  Logger.js  Logger.ts  LoggerBase.js  Register.js
src/handler/: input.rs
src/utils/: Group.js  Queue.js  Table.js  Util.js  obj.js  obj.ts  text.js  text.ts  util.js  util.ts  youtube.rs
src/utils/struct/: Group.js  Group.ts  Queue.js  Queue.ts  Table.js  Table.ts
