[package]
name = "melody"
version = "0.1.0"
authors = ["ScottyThePilot <scotty.codes@gmail.com>"]
edition = "2024"
rust-version = "1.85.1"

[dependencies]
ahash = { version = "0.8" }
build-info = { git = "https://github.com/ScottyThePilot/misc-crates", features = ["git", "chrono"] }
cacheable = { path = "./libs/cacheable" }
chrono = { version = "0.4", features = ["serde"] }
chumsky = { version = "0.9.2" }
cleverbot = { path = "./libs/cleverbot" }
cleverbot-logs = { path = "./libs/cleverbot-logs" }
const-random = { version = "0.1.15" }
defy = { git = "https://github.com/ScottyThePilot/misc-crates", features = ["log"] }
dunce = { version = "1.0.4" }
fern = { version = "0.6" }
float-ord = { version = "0.3.2" }
fs-err = { version = "3", features = ["tokio"] }
futures = "0.3.31"
ids = { git = "https://github.com/ScottyThePilot/misc-crates", features = ["serde"] }
itertools = { version = "0.14" }
log = { version = "0.4" }
melody-commander = { path = "./libs/melody-commander" }
melody-connect-four = { path = "./libs/melody-connect-four" }
melody-flag = { path = "./libs/melody-flag" }
melody-framework = { path = "./libs/melody-framework" }
melody-ratelimiter = { path = "./libs/melody-ratelimiter" }
melody-rss-feed = { path = "./libs/melody-rss-feed" }
rand = { version = "0.8", features = ["small_rng"] }
regex = { version = "1.8.4" }
reqwest = { version = "0.12" }
serde = { version = "1.0", features = ["derive", "rc"] }
singlefile = { version = "0.3.1", features = ["shared-async", "fs-err"] }
singlefile-formats = { version = "0.3.1", features = ["cbor-serde", "json-serde", "toml-serde"] }
songbird = { version = "0.5" }
symphonia = { version = "0.5.4", features = ["aac", "alac", "mp3"] }
term-stratum = { path = "./libs/term-stratum" }
thiserror = { version = "2.0" }
tokio = { version = "1.35", features = ["full", "parking_lot"] }
tracing = { version = "0.1.40", features = ["log-always"] }
uord = { git = "https://github.com/ScottyThePilot/misc-crates", features = ["serde"] }
url = { version = "2.4", features = ["serde"] }
yggdrasil = { git = "https://github.com/ScottyThePilot/misc-crates" }

[dependencies.serenity]
version = "0.12.4"
default-features = false
features = [
  "rustls_backend",
  "builder", "cache", "chrono", "client",
  "gateway", "model", "http",
  "unstable_discord_api"
]

[dependencies.poise]
version = "0.6.1"

[workspace]
resolver = "3"
members = [
  "libs/cacheable",
  "libs/cleverbot",
  "libs/cleverbot-logs",
  "libs/melody-chess",
  "libs/melody-commander",
  "libs/melody-connect-four",
  "libs/melody-flag",
  "libs/melody-framework",
  "libs/melody-ratelimiter",
  "libs/melody-rss-feed",
  "libs/melody-timer",
  "libs/term-stratum",
]

[profile.dev]
opt-level = 0
lto = "off"

[profile.dev.package.symphonia]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
