[package]
name = "melody"
version = "0.1.0"
authors = ["ScottyThePilot <scotty.codes@gmail.com>"]
edition = "2024"
rust-version = "1.87"

[dependencies]
ahash = { workspace = true }
build-info = { workspace = true }
cacheable = { workspace = true }
chrono = { workspace = true }
chumsky = { version = "0.9.2" }
cleverbot = { workspace = true }
cleverbot-logs = { workspace = true }
const-random = { version = "0.1.15" }
defy = { workspace = true }
feed-machine = { workspace = true }
fern = { version = "0.7.1", features = ["colored"] }
flate2 = { version = "1.1.8" }
float-ord = { workspace = true }
fs-err = { workspace = true, features = ["tokio"] }
futures = { workspace = true }
ids = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
melody-commander = { workspace = true }
melody-connect-four = { workspace = true }
melody-flag = { workspace = true }
melody-framework = { workspace = true }
melody-random = { workspace = true }
melody-ratelimiter = { workspace = true }
poise = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serenity = { workspace = true, features = ["rustls_backend", "cache", "chrono", "http", "unstable_discord_api"] }
singlefile = { workspace = true }
singlefile-formats = { workspace = true, features = ["cbor-serde", "json-serde", "toml-serde"] }
songbird = { version = "0.5" }
symphonia = { version = "0.5.4", features = ["aac", "alac", "mp3"] }
term-stratum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["log-always"] }
uord = { workspace = true }
url = { workspace = true }
yggdrasil = { workspace = true }

[workspace]
resolver = "3"
members = [
  "libs/cacheable",
  "libs/cleverbot",
  "libs/cleverbot-logs",
  "libs/feed-machine",
  "libs/melody-chess",
  "libs/melody-commander",
  "libs/melody-connect-four",
  "libs/melody-flag",
  "libs/melody-framework",
  "libs/melody-random",
  "libs/melody-ratelimiter",
  "libs/melody-rss-feed",
  "libs/melody-timer",
  "libs/term-stratum",
]

[workspace.dependencies]
ahash = { version = "0.8", features = ["serde"] }
async-trait = { version = "0.1" }
chrono = { version = "0.4", features = ["serde"] }
float-ord = { version = "0.3.2" }
fs-err = { version = "3" }
futures = { version = "0.3.31" }
image = { version = "0.25.6", default-features = false }
indexmap = { version = "2.13.0", features = ["serde"] }
itertools = { version = "0.14" }
log = { version = "0.4" }
rand = { version = "0.9.2" }
rand_chacha = { version = "0.9.0" }
rand_xoshiro = { version = "0.7.0" }
regex = { version = "1.8.4" }
reqwest = { version = "0.12" }
serde = { version = "1.0", features = ["derive", "rc"] }
singlefile = { version = "0.4.0-rc1", features = ["shared-async", "fs-err"] }
singlefile-formats = { version = "0.4.0-rc1" }
thiserror = { version = "2" }
tokio = { version = "1.35", features = ["parking_lot"] }
tracing = { version = "0.1.40" }
typemap_rev = { version = "0.3.0" }
url = { version = "2.4", features = ["serde"] }

build-info = { git = "https://github.com/ScottyThePilot/misc-crates", features = ["git", "chrono"] }
defy = { git = "https://github.com/ScottyThePilot/misc-crates", features = ["log"] }
ids = { git = "https://github.com/ScottyThePilot/misc-crates", features = ["serde"] }
uord = { git = "https://github.com/ScottyThePilot/uord", features = ["serde"] }
yggdrasil = { git = "https://github.com/ScottyThePilot/misc-crates" }

cacheable = { path = "./libs/cacheable" }
cleverbot = { path = "./libs/cleverbot" }
cleverbot-logs = { path = "./libs/cleverbot-logs" }
feed-machine = { path = "./libs/feed-machine" }
melody-chess = { path = "./libs/melody-chess" }
melody-commander = { path = "./libs/melody-commander" }
melody-connect-four = { path = "./libs/melody-connect-four" }
melody-flag = { path = "./libs/melody-flag" }
melody-framework = { path = "./libs/melody-framework" }
melody-random = { path = "./libs/melody-random" }
melody-ratelimiter = { path = "./libs/melody-ratelimiter" }
melody-rss-feed = { path = "./libs/melody-rss-feed" }
melody-timer = { path = "./libs/melody-timer" }
term-stratum = { path = "./libs/term-stratum" }

[workspace.dependencies.poise]
version = "0.6.1"

[workspace.dependencies.serenity]
default-features = false
features = ["builder", "client", "gateway", "model", "utils", "collector", "framework"]
version = "0.12.5"

[profile.dev]
opt-level = 0
lto = "off"
incremental = true

[profile.dev.package.symphonia]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
