[package]
name = "melody-chess"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
fontdue = { version = "0.9.3" }
glam = { version = "0.30" }
image = { workspace = true, features = ["png"] }
serde = { workspace = true }
shakmaty = { version = "0.29.1" }
uord = { workspace = true }
