[package]
name = "melody-framework"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, features = ["log"] }

[dependencies.poise]
workspace = true
features = ["chrono", "cache", "handle_panics"]

[dependencies.serenity]
workspace = true
features = ["builder", "client", "gateway", "model", "utils", "collector", "framework"]
