[package]
name = "melody-framework"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = { version = "2.12.1", optional = true }
itertools = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true, features = ["log"] }

[dependencies.poise]
workspace = true
features = ["chrono", "cache", "handle_panics"]

[dependencies.serenity]
workspace = true
features = ["builder", "client", "gateway", "model", "utils", "collector", "framework"]

[features]
default = []
feature = ["dep:indexmap"]
