[package]
name = "melody-rss-feed"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
feed = { version = "1.3.0", package = "feed-rs" }
mime = { version = "0.3" }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
