[package]
name = "rss-feed"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
feed = { version = "1.3.0", package = "feed-rs" }
mime = { version = "0.3" }
reqwest = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0" }
url = { version = "2.4", features = ["serde"] }
